fix(style): spacing after .colist
Added 1em padding bottom of .colist

--- a/app/styles/style.less
+++ b/app/styles/style.less
@@ -540,3 +540,7 @@ article {
     display: none;
   }
 }
+
+.colist{
+  padding-bottom: 1em;
+}
